--- a/Templates/AppSource App/.github/workflows/PublishToAppSource.yaml
+++ b/Templates/AppSource App/.github/workflows/PublishToAppSource.yaml
@@ -20,6 +20,7 @@ on:
 permissions:
   contents: read
   actions: read
+  id-token: write
 
 defaults:
   run:
@@ -76,6 +77,8 @@ jobs:
         uses: microsoft/AL-Go-Actions/Deliver@main
         env:
           Secrets: '${{ steps.ReadSecrets.outputs.Secrets }}'
+          ACTIONS_ID_TOKEN_REQUEST_TOKEN: '${{ env.ACTIONS_ID_TOKEN_REQUEST_TOKEN }}'
+          ACTIONS_ID_TOKEN_REQUEST_URL: '${{ env.ACTIONS_ID_TOKEN_REQUEST_URL }}'
         with:
           shell: powershell
           parentTelemetryScopeJson: ${{ needs.Initialization.outputs.telemetryScopeJson }}
